--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-/* line 4, ../sass/_coolz.scss */
+/* line 11, ../sass/_coolz.scss */
 *, *:before, *:after {
   margin: 0;
   padding: 0;
@@ -8,137 +8,194 @@
   box-sizing: border-box;
 }
 
-/* line 11, ../sass/_coolz.scss */
+/* line 18, ../sass/_coolz.scss */
+html, body {
+  font-size: 100%;
+  line-height: 100%;
+}
+
+/* line 23, ../sass/_coolz.scss */
 body {
   font-family: "Helvetica Neue", "Helvetica", helvetica, arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
   font-weight: normal;
   color: #222;
-  background: #70D5C5;
+  background: #70d5c5;
 }
 
-/* line 20, ../sass/_coolz.scss */
+/* line 30, ../sass/_coolz.scss */
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 20px;
+  line-height: 1em;
+  color: #333333;
+}
+/* line 35, ../sass/_coolz.scss */
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+  text-decoration: none;
+}
+
+/* line 40, ../sass/_coolz.scss */
 h1 {
-  margin-bottom: 16px;
-  font-size: 56px;
-  line-height: 58px;
-  color: #fff;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+  font-size: 3.5em;
+  line-height: 1em;
 }
 
-/* line 28, ../sass/_coolz.scss */
+/* line 45, ../sass/_coolz.scss */
+h2 {
+  font-size: 3em;
+}
+
+/* line 49, ../sass/_coolz.scss */
+h3 {
+  font-size: 2.5em;
+}
+
+/* line 53, ../sass/_coolz.scss */
+h4 {
+  font-size: 2em;
+}
+
+/* line 57, ../sass/_coolz.scss */
+h5 {
+  font-size: 1.5em;
+}
+
+/* line 61, ../sass/_coolz.scss */
+h6 {
+  font-size: 1.2em;
+}
+
+/* line 65, ../sass/_coolz.scss */
+.light {
+  font-weight: normal;
+}
+
+/* line 69, ../sass/_coolz.scss */
+p {
+  margin-bottom: 20px;
+}
+/* line 72, ../sass/_coolz.scss */
+p:last-child {
+  margin-bottom: 0;
+}
+
+/* line 77, ../sass/_coolz.scss */
 a {
-  color: #70D5C5;
+  color: #333333;
+  text-decoration: underline;
 }
 
-/* line 32, ../sass/_coolz.scss */
+/* line 82, ../sass/_coolz.scss */
 img {
   max-width: 100%;
   height: auto;
 }
 
-/* line 37, ../sass/_coolz.scss */
+/* line 87, ../sass/_coolz.scss */
 iframe {
   max-width: 100%;
   height: auto;
 }
 
-/* line 42, ../sass/_coolz.scss */
+/* line 92, ../sass/_coolz.scss */
 .wrapper-main {
   position: relative;
   margin: auto;
   max-width: 1280px;
   width: 100%;
+  background: white;
 }
 
-/* line 49, ../sass/_coolz.scss */
+/* line 100, ../sass/_coolz.scss */
 .row {
   position: relative;
   display: block;
   width: 100%;
-  background: white;
 }
-/* line 55, ../sass/_coolz.scss */
+/* line 106, ../sass/_coolz.scss */
 .row:before, .row:after {
   display: table;
   content: " ";
+  clear: both;
 }
 
-/* line 61, ../sass/_coolz.scss */
-.columns {
+/* line 113, ../sass/_coolz.scss */
+.columns, .column {
   float: left;
 }
+/* line 116, ../sass/_coolz.scss */
+.columns:last-child, .column:last-child {
+  float: right;
+}
 
-/* line 65, ../sass/_coolz.scss */
+/* line 121, ../sass/_coolz.scss */
 [class^="large-"] {
   position: relative;
   display: block;
-  border: 1px solid #666;
-  text-align: center;
+  border: 1px solid #333333;
+  padding: 20px;
 }
 
-/* line 72, ../sass/_coolz.scss */
+/* line 128, ../sass/_coolz.scss */
 .large-12 {
   width: 100%;
 }
 
-/* line 76, ../sass/_coolz.scss */
+/* line 132, ../sass/_coolz.scss */
 .large-11 {
-  width: 91.66666666666663%;
+  width: 91.666%;
 }
 
-/* line 80, ../sass/_coolz.scss */
+/* line 136, ../sass/_coolz.scss */
 .large-10 {
-  width: 83.3333333333333%;
+  width: 83.333%;
 }
 
-/* line 84, ../sass/_coolz.scss */
+/* line 140, ../sass/_coolz.scss */
 .large-9 {
-  width: 74.99999999999997%;
+  width: 75%;
 }
 
-/* line 88, ../sass/_coolz.scss */
+/* line 144, ../sass/_coolz.scss */
 .large-8 {
-  width: 66.66666666666664%;
+  width: 66.666%;
 }
 
-/* line 92, ../sass/_coolz.scss */
+/* line 148, ../sass/_coolz.scss */
 .large-7 {
-  width: 58.33333333333331%;
+  width: 58.333%;
 }
 
-/* line 96, ../sass/_coolz.scss */
+/* line 152, ../sass/_coolz.scss */
 .large-6 {
-  width: 49.99999999999998%;
+  width: 50%;
 }
 
-/* line 100, ../sass/_coolz.scss */
+/* line 156, ../sass/_coolz.scss */
 .large-5 {
-  width: 41.66666666666665%;
+  width: 41.666%;
 }
 
-/* line 104, ../sass/_coolz.scss */
+/* line 160, ../sass/_coolz.scss */
 .large-4 {
-  width: 33.33333333333332%;
+  width: 33.333%;
 }
 
-/* line 108, ../sass/_coolz.scss */
+/* line 164, ../sass/_coolz.scss */
 .large-3 {
-  width: 24.99999999999999%;
+  width: 25%;
 }
 
-/* line 112, ../sass/_coolz.scss */
+/* line 168, ../sass/_coolz.scss */
 .large-2 {
-  width: 16.66666666666666%;
+  width: 16.666%;
 }
 
-/* line 116, ../sass/_coolz.scss */
+/* line 172, ../sass/_coolz.scss */
 .large-1 {
-  width: 8.33333333333333%;
+  width: 8.333%;
 }
 
-/* line 120, ../sass/_coolz.scss */
+/* line 176, ../sass/_coolz.scss */
 .button {
   border: 1px solid #000;
   padding: 10px;
@@ -149,4 +206,20 @@ iframe {
   -ms-border-radius: 6px;
   -o-border-radius: 6px;
   border-radius: 6px;
+}
+
+@media (max-width: 767px) {
+  /* line 2, ../sass/_media.scss */
+  .columns, .column {
+    float: none;
+  }
+  /* line 5, ../sass/_media.scss */
+  .columns:last-child, .column:last-child {
+    float: none;
+  }
+
+  /* line 10, ../sass/_media.scss */
+  [class^="large-"] {
+    width: 100%;
+  }
 }
