--- a/sass/_coolz.scss
+++ b/sass/_coolz.scss
@@ -1,10 +1,14 @@
 // settings
 $grid: 1280px;
-$gutter: 20px;
-$border: 0px solid #333;
+$gutter: 1.25em;
+$margin: 0.6em;
+$border: 1px solid #333;
 
+$txtSize: 1.2em;
+$lineHeight: 1.4em;
 $txtColor: #333;
 $linkColor: #333;
+
 $bgColor: #70D5C5;
 $wrapperBgColor: white;
 
@@ -28,7 +32,7 @@ body{
 }
 
 h1, h2, h3, h4, h5, h6{
-	margin-bottom: $gutter;
+	margin-bottom: $margin;
 	line-height: 1em;
 	color: $txtColor;
 
@@ -67,10 +71,10 @@ h6{
 }
 
 p{
-	margin-bottom: $gutter;
+	margin-bottom: $margin;
 	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 1.2em;
-	line-height: 1.2em;
+	font-size: $txtSize;
+	line-height: $lineHeight;
 
 	&:last-child{
 		margin-bottom: 0;
@@ -182,9 +186,17 @@ iframe{
 }
 
 .button{
-	border: 1px solid #000;
-	padding: 10px;
+	border: 1px solid;
+	border-top-color: #70D5C5;
+	border-right-color: #70D5C5;
+	border-bottom-color: #70D5C5;
+	border-left-color: #70D5C5;
+	padding: 8px 10px 10px 10px;
+	font-weight: bold;
 	color: #fff;
-	background: black;
+	text-decoration: none;
+	@include text-shadow(0px 1px 2px rgba(0, 0, 0, 0.5));
+	@include background(linear-gradient(#70D5C5 0%, #70D5C5 15%, #70D5C5 85%));
 	@include border-radius(6px);
+	@include box-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));
 }
