--- a/css/custom.css
+++ b/css/custom.css
@@ -24,7 +24,7 @@ body {
 
 /* line 34, ../sass/_coolz.scss */
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 0.6em;
+  margin-bottom: 0.3em;
   line-height: 1em;
   color: #333333;
 }
@@ -35,66 +35,81 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 /* line 44, ../sass/_coolz.scss */
 h1 {
+  margin-bottom: 0.2em;
   font-size: 3.5em;
-  line-height: 1em;
 }
 
 /* line 49, ../sass/_coolz.scss */
 h2 {
+  margin-bottom: 0.3em;
   font-size: 3em;
 }
 
-/* line 53, ../sass/_coolz.scss */
+/* line 54, ../sass/_coolz.scss */
 h3 {
+  margin-bottom: 0.3em;
   font-size: 2.5em;
 }
 
-/* line 57, ../sass/_coolz.scss */
+/* line 59, ../sass/_coolz.scss */
 h4 {
   font-size: 2em;
 }
 
-/* line 61, ../sass/_coolz.scss */
+/* line 63, ../sass/_coolz.scss */
 h5 {
   font-size: 1.5em;
 }
 
-/* line 65, ../sass/_coolz.scss */
+/* line 67, ../sass/_coolz.scss */
 h6 {
   font-size: 1.2em;
 }
 
-/* line 69, ../sass/_coolz.scss */
+/* line 71, ../sass/_coolz.scss */
 .light {
   font-weight: normal;
 }
 
-/* line 73, ../sass/_coolz.scss */
+/* line 75, ../sass/_coolz.scss */
 p {
   margin-bottom: 0.6em;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 1.2em;
   line-height: 1.4em;
 }
-/* line 79, ../sass/_coolz.scss */
+/* line 81, ../sass/_coolz.scss */
 p:last-child {
   margin-bottom: 0;
 }
 
-/* line 84, ../sass/_coolz.scss */
+/* line 86, ../sass/_coolz.scss */
 a {
   color: #333333;
   text-decoration: underline;
 }
 
-/* line 90, ../sass/_coolz.scss */
+/* line 92, ../sass/_coolz.scss */
 img,
 iframe {
   max-width: 100%;
   height: auto;
 }
 
-/* line 95, ../sass/_coolz.scss */
+/* line 97, ../sass/_coolz.scss */
+pre {
+  border: 1px solid #ccc;
+  padding: 5px 8px 5px 8px;
+  white-space: normal;
+  background-color: #eee;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+
+/* line 105, ../sass/_coolz.scss */
 .wrapper-main {
   position: relative;
   margin: auto;
@@ -103,26 +118,26 @@ iframe {
   background: white;
 }
 
-/* line 103, ../sass/_coolz.scss */
+/* line 113, ../sass/_coolz.scss */
 .row {
   position: relative;
   display: block;
   width: 100%;
 }
-/* line 108, ../sass/_coolz.scss */
+/* line 118, ../sass/_coolz.scss */
 .row .row {
   margin-left: -1.25em;
   margin-right: -1.25em;
   width: auto;
 }
-/* line 114, ../sass/_coolz.scss */
+/* line 124, ../sass/_coolz.scss */
 .row:before, .row:after {
   display: table;
   content: " ";
   clear: both;
 }
 
-/* line 126, ../sass/_coolz.scss */
+/* line 136, ../sass/_coolz.scss */
 .columns,
 .column,
 .col,
@@ -131,7 +146,7 @@ iframe {
 .coolz {
   float: left;
 }
-/* line 129, ../sass/_coolz.scss */
+/* line 139, ../sass/_coolz.scss */
 .columns:last-child,
 .column:last-child,
 .col:last-child,
@@ -141,86 +156,107 @@ iframe {
   float: right;
 }
 
-/* line 134, ../sass/_coolz.scss */
-[class^="large-"] {
+/* line 144, ../sass/_coolz.scss */
+[class^="L-"] {
   position: relative;
   display: block;
-  border: 1px solid #eeeeee;
   padding: 1.25em;
 }
 
-/* line 141, ../sass/_coolz.scss */
-.large-12 {
+/* line 151, ../sass/_coolz.scss */
+.demo [class^="L-"] {
+  border: 1px solid #fff;
+  color: #fff;
+  text-align: center;
+  background-color: #E37863;
+}
+/* line 157, ../sass/_coolz.scss */
+.demo [class^="L-"]:nth-child(odd) {
+  background-color: #eb9f90;
+}
+
+/* line 163, ../sass/_coolz.scss */
+.L-12 {
   width: 100%;
 }
 
-/* line 145, ../sass/_coolz.scss */
-.large-11 {
+/* line 167, ../sass/_coolz.scss */
+.L-11 {
   width: 91.666%;
 }
 
-/* line 149, ../sass/_coolz.scss */
-.large-10 {
+/* line 171, ../sass/_coolz.scss */
+.L-10 {
   width: 83.333%;
 }
 
-/* line 153, ../sass/_coolz.scss */
-.large-9 {
+/* line 175, ../sass/_coolz.scss */
+.L-9 {
   width: 75%;
 }
 
-/* line 157, ../sass/_coolz.scss */
-.large-8 {
+/* line 179, ../sass/_coolz.scss */
+.L-8 {
   width: 66.666%;
 }
 
-/* line 161, ../sass/_coolz.scss */
-.large-7 {
+/* line 183, ../sass/_coolz.scss */
+.L-7 {
   width: 58.333%;
 }
 
-/* line 165, ../sass/_coolz.scss */
-.large-6 {
+/* line 187, ../sass/_coolz.scss */
+.L-6 {
   width: 50%;
 }
 
-/* line 169, ../sass/_coolz.scss */
-.large-5 {
+/* line 191, ../sass/_coolz.scss */
+.L-5 {
   width: 41.666%;
 }
 
-/* line 173, ../sass/_coolz.scss */
-.large-4 {
+/* line 195, ../sass/_coolz.scss */
+.L-4 {
   width: 33.333%;
 }
 
-/* line 177, ../sass/_coolz.scss */
-.large-3 {
+/* line 199, ../sass/_coolz.scss */
+.L-3 {
   width: 25%;
 }
 
-/* line 181, ../sass/_coolz.scss */
-.large-2 {
+/* line 203, ../sass/_coolz.scss */
+.L-2 {
   width: 16.666%;
 }
 
-/* line 185, ../sass/_coolz.scss */
-.large-1 {
+/* line 207, ../sass/_coolz.scss */
+.L-1 {
   width: 8.333%;
 }
 
 @media (max-width: 767px) {
-  /* line 2, ../sass/_media.scss */
-  .columns, .column {
+  /* line 7, ../sass/_media.scss */
+  .columns,
+  .column,
+  .col,
+  .cols,
+  .cool,
+  .coolz {
     float: none;
   }
-  /* line 5, ../sass/_media.scss */
-  .columns:last-child, .column:last-child {
+  /* line 10, ../sass/_media.scss */
+  .columns:last-child,
+  .column:last-child,
+  .col:last-child,
+  .cols:last-child,
+  .cool:last-child,
+  .coolz:last-child {
     float: none;
   }
 
-  /* line 10, ../sass/_media.scss */
-  [class^="large-"] {
+  /* line 15, ../sass/_media.scss */
+  [class^="L-"] {
     width: 100%;
   }
 }
