--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,11 +1,8 @@
 @import "compass";
-//@import "rgbapng"; - https://github.com/aaronrussell/compass-rgbapng
 @import "mixins";
 @import "coolz";
 
-$experimental-support-for-svg: true;
-
-
+/* > YOUR SCSS GOES HERE < */
 
 @import "ie";
 @import "media";
