--- a/sass/_coolz.scss
+++ b/sass/_coolz.scss
@@ -68,7 +68,8 @@ h6{
 	font-size: 1.2em;
 }
 
-.light{
+.light, 
+.thin{
 	font-weight: normal;
 }
 
@@ -95,10 +96,12 @@ iframe{
 }
 
 pre{
+	margin-bottom: $gutter;
 	border: 1px solid #ccc;
 	padding: 5px 8px 5px 8px;
-	white-space: normal;
+	word-break: break-all;
 	background-color: #eee;
+	overflow-x: hidden;
 	@include border-radius(4px);
 
 	code{
@@ -145,16 +148,20 @@ pre{
 	}
 }
 
-[class^="L-"], 
-[class^="l-"]{
+[class*="L-"], 
+[class*="l-"], 
+[class*="S-"], 
+[class*="s-"]{
 	position: relative;
 	display: block;
 	padding: $gutter;
 }
 
 .demo{
-	[class^="L-"], 
-	[class^="l-"]{
+	[class*="L-"], 
+	[class*="l-"], 
+	[class*="S-"], 
+	[class*="s-"]{
 		border: 1px solid #fff;
 		color: #fff;
 		text-align: center;
