--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,3 +1,15 @@
+@media(screen and min-width: 768px){
+	.L-hide, 
+	.l-hide{
+		display: none;
+	}
+
+	.L-show, 
+	.l-show{
+		display: block;
+	}
+}
+
 @media(screen and max-width: 767px){
 	.columns, 
 	.column, 
@@ -12,8 +24,83 @@
 		}
 	}
 
-	[class^="L-"], 
-	[class^="l-"]{
+	[class*="L-"], 
+	[class*="l-"]{
 		width: 100%;
+	}
+
+	[class*="S-"], 
+	[class*="s-"]{
+		width: auto;
+	}
+
+	.S-12, 
+	.s-12{
+		width: 100%;
+	}
+
+	.S-11, 
+	.s-11{
+		width: 91.666%;
+	}
+
+	.S-10, 
+	.s-10{
+		width: 83.333%;
+	}
+
+	.S-9, 
+	.s-9{
+		width: 75%;
+	}
+
+	.S-8, 
+	.s-8{
+		width: 66.666%;
+	}
+
+	.S-7, 
+	.s-7{
+		width: 58.333%;
+	}
+
+	.S-6, 
+	.s-6{
+		width: 50%;
+	}
+
+	.S-5, 
+	.s-5{
+		width: 41.666%;
+	}
+
+	.S-4, 
+	.s-4{
+		width: 33.333%;
+	}
+
+	.S-3, 
+	.s-3{
+		width: 25%;
+	}
+
+	.S-2, 
+	.s-2{
+		width: 16.666%;
+	}
+
+	.S-1, 
+	.s-1{
+		width: 8.333%;
+	}
+
+	.S-hide, 
+	.s-hide{
+		display: none;
+	}
+
+	.S-show, 
+	.s-show{
+		display: block;
 	}
 }
