Added favicon and some additional classes for large.

--- a/sass/_coolz.scss
+++ b/sass/_coolz.scss
@@ -148,8 +148,12 @@ pre{
 	}
 }
 
+[class*="Large-"], 
+[class*="large-"], 
 [class*="L-"], 
 [class*="l-"], 
+[class*="Small-"], 
+[class*="small-"], 
 [class*="S-"], 
 [class*="s-"]{
 	position: relative;
@@ -173,61 +177,85 @@ pre{
 	}
 }
 
+.Large-12, 
+.large-12, 
 .L-12, 
 .l-12{
 	width: 100%;
 }
 
+.Large-11, 
+.large-11, 
 .L-11, 
 .l-11{
 	width: 91.666%;
 }
 
+.Large-10, 
+.large-10, 
 .L-10, 
 .l-10{
 	width: 83.333%;
 }
 
+.Large-9, 
+.large-9, 
 .L-9, 
 .l-9{
 	width: 75%;
 }
 
+.Large-8, 
+.large-8,
 .L-8, 
 .l-8{
 	width: 66.666%;
 }
 
+.Large-7, 
+.large-7, 
 .L-7, 
 .l-7{
 	width: 58.333%;
 }
 
+.Large-6, 
+.large-6, 
 .L-6, 
 .l-6{
 	width: 50%;
 }
 
+.Large-5, 
+.large-5, 
 .L-5, 
 .l-5{
 	width: 41.666%;
 }
 
+.Large-4, 
+.large-4, 
 .L-4, 
 .l-4{
 	width: 33.333%;
 }
 
+.Large-3, 
+.large-3, 
 .L-3, 
 .l-3{
 	width: 25%;
 }
 
+.Large-2, 
+.large-2, 
 .L-2, 
 .l-2{
 	width: 16.666%;
 }
 
+.Large-1, 
+.large-1, 
 .L-1, 
 .l-1{
 	width: 8.333%;
