--- a/css/custom.css
+++ b/css/custom.css
@@ -164,9 +164,13 @@ pre code {
   float: right;
 }
 
-/* line 154, ../sass/_coolz.scss */
+/* line 158, ../sass/_coolz.scss */
+[class*="Large-"],
+[class*="large-"],
 [class*="L-"],
 [class*="l-"],
+[class*="Small-"],
+[class*="small-"],
 [class*="S-"],
 [class*="s-"] {
   position: relative;
@@ -174,7 +178,7 @@ pre code {
   padding: 1.25em;
 }
 
-/* line 164, ../sass/_coolz.scss */
+/* line 168, ../sass/_coolz.scss */
 .demo [class*="L-"],
 .demo [class*="l-"],
 .demo [class*="S-"],
@@ -184,7 +188,7 @@ pre code {
   text-align: center;
   background-color: #E37863;
 }
-/* line 170, ../sass/_coolz.scss */
+/* line 174, ../sass/_coolz.scss */
 .demo [class*="L-"]:nth-child(odd),
 .demo [class*="l-"]:nth-child(odd),
 .demo [class*="S-"]:nth-child(odd),
@@ -192,73 +196,97 @@ pre code {
   background-color: #eb9f90;
 }
 
-/* line 177, ../sass/_coolz.scss */
+/* line 183, ../sass/_coolz.scss */
+.Large-12,
+.large-12,
 .L-12,
 .l-12 {
   width: 100%;
 }
 
-/* line 182, ../sass/_coolz.scss */
+/* line 190, ../sass/_coolz.scss */
+.Large-11,
+.large-11,
 .L-11,
 .l-11 {
   width: 91.666%;
 }
 
-/* line 187, ../sass/_coolz.scss */
+/* line 197, ../sass/_coolz.scss */
+.Large-10,
+.large-10,
 .L-10,
 .l-10 {
   width: 83.333%;
 }
 
-/* line 192, ../sass/_coolz.scss */
+/* line 204, ../sass/_coolz.scss */
+.Large-9,
+.large-9,
 .L-9,
 .l-9 {
   width: 75%;
 }
 
-/* line 197, ../sass/_coolz.scss */
+/* line 211, ../sass/_coolz.scss */
+.Large-8,
+.large-8,
 .L-8,
 .l-8 {
   width: 66.666%;
 }
 
-/* line 202, ../sass/_coolz.scss */
+/* line 218, ../sass/_coolz.scss */
+.Large-7,
+.large-7,
 .L-7,
 .l-7 {
   width: 58.333%;
 }
 
-/* line 207, ../sass/_coolz.scss */
+/* line 225, ../sass/_coolz.scss */
+.Large-6,
+.large-6,
 .L-6,
 .l-6 {
   width: 50%;
 }
 
-/* line 212, ../sass/_coolz.scss */
+/* line 232, ../sass/_coolz.scss */
+.Large-5,
+.large-5,
 .L-5,
 .l-5 {
   width: 41.666%;
 }
 
-/* line 217, ../sass/_coolz.scss */
+/* line 239, ../sass/_coolz.scss */
+.Large-4,
+.large-4,
 .L-4,
 .l-4 {
   width: 33.333%;
 }
 
-/* line 222, ../sass/_coolz.scss */
+/* line 246, ../sass/_coolz.scss */
+.Large-3,
+.large-3,
 .L-3,
 .l-3 {
   width: 25%;
 }
 
-/* line 227, ../sass/_coolz.scss */
+/* line 253, ../sass/_coolz.scss */
+.Large-2,
+.large-2,
 .L-2,
 .l-2 {
   width: 16.666%;
 }
 
-/* line 232, ../sass/_coolz.scss */
+/* line 260, ../sass/_coolz.scss */
+.Large-1,
+.large-1,
 .L-1,
 .l-1 {
   width: 8.333%;
